# FNWM

./: .env.example  .gitignore  .pre-commit-config.yaml  MIGRATION_COMPLETE.md  Makefile  README.md  REORGANIZATION_SUMMARY.md  SCHEMA_UPDATES_2026-01-09.md  TODO.md  environment.yml  main.tf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project.py  variables.tf
.claude/: settings.local.json
Claude-Context/: prd.txt
config/: README.md
config/hatches/: green_drake.yaml
config/species/: trout.yaml
config/thresholds/: rising_limb.yaml
data/: README.md  metric_test_results_20260103_215128.csv
data/exports/: map_current_conditions.geojson  test_with_fahrenheit.geojson
docs/api/: README.md
docs/development/: RESTORE-THERMAL-CHECKLIST.md  epic-2-completion-summary.md  epic-4-completion-summary.md  epic-4-thermal-workaround.md  epic-5-completion-summary.md  epic-6-completion-summary.md  project-status.md
docs/fixes/: flow_units_conversion.md
docs/guides/: implementation.md  map-export-guide.md  nhd-integration.md  nwm-product-schedules.md  quickstart.md  schema-migration-guide.md  scripts-reorganization-summary.md  usgs-integration.md
docs/models/: water-temperature-prediction.md
docs/setup/: aws-rds.md  conda.md
scripts/: init_db.py  test_end_to_end_ingestion.py  test_nwm_client.py
scripts/archive/: run_fix_flow_units.py
scripts/db/: backup_database.py  create_schemas.sql  init_schemas.py  migrate_to_schemas.py  migrate_to_schemas.sql  move_temperature_to_observations.sql  rename_spatial_to_nhd.py  rename_spatial_to_nhd.sql  update_code_schema_references.py
scripts/dev/: check_feature_id_overlap.py  check_reach_metadata.py  check_temp_table.py  check_usgs_sites.py  check_variables.py  count_feature_ids.py  inspect_new_nhd.py  (+8 more)
tests/: README.md
(+106 files in other folders)
